--- a/site/.gitignore
+++ b/site/.gitignore
@@ -13,12 +13,8 @@ yarn-debug.log*
 yarn-error.log*
 pnpm-debug.log*
 
-# Typescript
-*.tsbuildinfo
-
-# Dotenv and similar local-only files
+# environment variables
 *.local
 
-# misc
+# macOS-specific files
 .DS_Store
-*.pem
