--- a/site/package.json
+++ b/site/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@astrojs/check": "^0.5.2",
+    "@astrojs/netlify": "^5.1.2",
     "@astrojs/tailwind": "^5.1.0",
     "astro": "^4.3.5",
     "tailwindcss": "^3.4.1",
