--- a/site/package.json
+++ b/site/package.json
@@ -13,6 +13,8 @@
     "@astrojs/check": "^0.5.2",
     "@astrojs/netlify": "^5.1.2",
     "@astrojs/tailwind": "^5.1.0",
+    "@sanity/astro": "^2.2.1",
+    "@sanity/client": "^6.14.0",
     "astro": "^4.3.5",
     "tailwindcss": "^3.4.1",
     "typescript": "^5.3.3"
